# dnf5

./: CMakeLists.txt  dnf5.spec
dnf5-plugins/: CMakeLists.txt
dnf5-plugins/bootcupdate_plugin/: CMakeLists.txt  bootcupdate.cpp  bootcupdate.hpp  bootcupdate_cmd_plugin.cpp
